--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ button {
   border-width: medium 1px 1px medium;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   min-width: 120px;
-  background-color: solid #f7f7f7
+  background-color: #f7f7f7;
 }
 
 /* On screens that are 992px or less, set the relevant button size */
