--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,11 @@ input {
   border-style: none solid solid none;
   border-width: medium 1px 1px medium;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  color: #555555;
+  color: #000;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1em;
   line-height: 1.4em;
+  background-color: #f7f7f7;
 }
 
 img { max-width: 80%; height: auto; }
