--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
   background: -o-linear-gradient(black, blue); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(black, blue); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, blue); /* Standard syntax */
+  white-space: nowrap;
 }
 
 textarea {
