--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  overflow-x: auto;
   font-family:Courier New;
   background: -webkit-linear-gradient(black, blue); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(black, blue); /* For Opera 11.1 to 12.0 */
