--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 body {
-  overflow-x: auto;
+  overflow-x: hidden;
   font-family:Courier New;
   background: -webkit-linear-gradient(black, blue); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(black, blue); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(black, blue); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, blue); /* Standard syntax */
-  white-space: nowrap;
+  white-space: normal;
 }
 
 textarea {
