--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ textarea {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   color: #000;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 1em;
+  font-size: 19px;
   line-height: 1.4em;
   padding: 5px 8px;
   transition: background-color 0.2s ease 0s;
@@ -76,6 +76,6 @@ button {
     font-size: 18px;
   }
   textarea {
-    font-size: 0.9em;
+    font-size: 16px;
   }
 }
