--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ textarea {
   resize: none;
 }
 
-
 textarea:focus {
   background: none repeat scroll 0 0 #FFFFFF;
   outline-width: 0;
@@ -76,6 +75,9 @@ button {
     font-size: 18px;
   }
   textarea {
+    font-size: 16px;
+  }
+  input {
     font-size: 16px;
   }
 }
