--- a/css/styles.css
+++ b/css/styles.css
@@ -65,19 +65,19 @@ button {
   border-style: none solid solid none;
   border-width: medium 1px 1px medium;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  min-width: 120px;
+  min-width: 10px;
   background-color: #f7f7f7;
 }
 
 /* On screens that are 992px or less, set the relevant button size */
 @media screen and (max-width: 992px) {
   button {
-    font-size: 18px;
+    font-size: 4vw;
   }
   textarea {
-    font-size: 16px;
+    font-size: 3vw;
   }
   input {
-    font-size: 18px;
+    font-size: 3vw;
   }
 }
