Hide horizontal overflow in textarea

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ textarea {
   padding: 5px 8px;
   transition: background-color 0.2s ease 0s;
   resize: none;
+  overflow-x: hidden;
 }
 
 textarea:focus {
