--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
   background: -moz-linear-gradient(black, blue); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, blue); /* Standard syntax */
   white-space: normal;
+  margin: 0 auto;
 }
 
 textarea {
