--- a/css/styles.css
+++ b/css/styles.css
@@ -82,13 +82,14 @@ button {
   border-width: medium 1px 1px medium;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   min-width: 90px;
+  font-family: Tahoma;
   background-color: #f7f7f7;
 }
 
 /* On screens that are 992px or less, set the relevant button size */
 @media screen and (max-width: 650px) {
   button {
-    font-size: 4.5vw;
+    font-size: 4vw;
   }
   textarea {
     font-size: 4vw;
