--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ button {
   border-width: medium 1px 1px medium;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   min-width: 100px;
+  width:80%;
   background-color: #f7f7f7;
 }
 
