--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ input {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 26px;
   line-height: 1.4em;
+  text-align: center; 
   background-color: #f7f7f7;
 }
 
