--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ input {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 26px;
   line-height: 1.4em;
-  text-align: left; 
+  text-align: center; 
   background-color: #f7f7f7;
 }
 
@@ -84,7 +84,6 @@ button {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   min-width: 100px;
   width:80%;
-  text-align: left; 
   background-color: #f7f7f7;
 }
 
