--- a/css/styles.css
+++ b/css/styles.css
@@ -75,17 +75,29 @@ input {
 img { max-width: 80%; height: auto; }
 
 button {
-  font-size: 30px;
-  font-weight: bold;
-  cursor:hand;
-  padding: 5px;
-  border-radius: 6px 6px 6px 6px;
-  border-style: none solid solid none;
-  border-width: medium 1px 1px medium;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  min-width: 100px;
-  width:80%;
-  background-color: #f7f7f7;
+	box-shadow: 3px 4px 0px 0px #899599;
+	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+	background-color:#ededed;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+	display:inline-block;
+	cursor:pointer;
+	color:#3a8a9e;
+	font-family:Arial;
+	font-size:30px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #e1e2ed;
+	width: 80%;
+}
+
+button:hover {
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color:#bab1ba;
+}
+.button:active {
+	position:relative;
+	top:1px;
 }
 
 /* On screens that are 992px or less, set the relevant button size */
