--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ textarea {
   transition: background-color 0.2s ease 0s;
   resize: none;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 textarea:focus {
@@ -108,6 +109,7 @@ button:hover {
   }
   textarea {
     font-size: 4vw;
+    overflow-y:visible;
   }
   input {
     font-size: 4.5vw;
