--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,11 @@ textarea {
   transition: background-color 0.2s ease 0s;
   resize: none;
   overflow-x: hidden;
-  overflow-y: hidden;
+  scrollbar-width: none;
+}
+
+textarea::-webkit-scrollbar {
+  width: 0px;
 }
 
 textarea:focus {
@@ -109,7 +113,6 @@ button:hover {
   }
   textarea {
     font-size: 4vw;
-    overflow-y:visible;
   }
   input {
     font-size: 4.5vw;
