--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ input {
   line-height: 1.4em;
   text-align: center; 
   background-color: #f7f7f7;
+  width:80%;
 }
 
 img { max-width: 80%; height: auto; }
@@ -107,7 +108,7 @@ button:hover {
 }
 
 /* On screens that are 992px or less, set the relevant button size */
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 950px) {
   button {
     font-size: 4.5vw;
   }
@@ -118,3 +119,20 @@ button:hover {
     font-size: 4.5vw;
   }
 }
+
+@media screen and (min-width: 950px) {
+  button {
+    font-size: 4.5vw;
+    width: 60%;
+  }
+  textarea {
+    font-size: 4vw;
+    width: 60%;
+  }
+  input {
+    font-size: 4.5vw;
+    width: 60%;
+  }
+}
+
+
