Changed button font-family

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ button {
   display:inline-block;
   cursor:pointer;
   color:#3a8a9e;
-  font-family:Arial;
+  font-family:Tahoma;
   font-size:30px;
   padding:7px 25px;
   text-decoration:none;
