--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ textarea {
   resize: none;
   overflow-x: hidden;
   scrollbar-width: none;
-  background-color: #fff;
+  background-color: #fff !important;;
 }
 
 textarea::-webkit-scrollbar {
@@ -75,7 +75,7 @@ input {
   font-size: 30px;
   line-height: 1.4em;
   text-align: center; 
-  background-color: #fff;
+  background-color: #fff !important;;
 }
 
 img { max-width: 80%; height: auto; }
