--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,20 @@ button:hover {
   }
   textarea {
     font-size: 4vw;
-	height: 55vh;
+    height: 55vh;
+  }
+  input {
+    font-size: 4.5vw;
+  }
+}
+
+@media screen and (min-width: 2500px), (min-height: 1400px) {
+  button {
+    font-size: 4.5vw;
+  }
+  textarea {
+    font-size: 4vw;
+    height: 45vh;
   }
   input {
     font-size: 4.5vw;
