--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ button:hover {
   }
 }
 
-@media screen and (min-width: 2500px), (min-height: 1400px) {
+@media screen and (min-width: 2500px) and (min-height: 1400px) {
   button {
     font-size: 4.5vw;
   }
