--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,16 @@ button:hover {
     font-size: 30px;
   }
 }
+
+@media screen and (min-width: 1100px) and (min-height: 2400px) {
+  button {
+    font-size: 30px;
+  }
+  textarea {
+    font-size: 22px;
+    height: 60vh;
+  }
+  input {
+    font-size: 30px;
+  }
+}
