--- a/css/styles.css
+++ b/css/styles.css
@@ -139,13 +139,13 @@ button:hover {
 
 @media screen and (min-width: 1100px) and (min-height: 2400px) {
   button {
-    font-size: 30px;
+    font-size: 4.5vw;
   }
   textarea {
-    font-size: 22px;
+    font-size: 4vw;
     height: 60vh;
   }
   input {
-    font-size: 30px;
+    font-size: 4.5vw;
   }
 }
