--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,20 @@ button:hover {
 	top:1px;
 }
 
-@media screen and (max-width: 1100px), (min-height: 1100px) {
+@media screen and (max-width: 1100px) and (max-height: 1100px) {
+  button {
+    font-size: 4.5vw;
+  }
+  textarea {
+    font-size: 4vw;
+    height: 55vh;
+  }
+  input {
+    font-size: 4.5vw;
+  }
+}
+
+@media screen and (max-width: 1100px) and (min-height: 1100px) {
   button {
     font-size: 4.5vw;
   }
