--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ button:hover {
 	top:1px;
 }
 
-@media screen and (max-width: 1100px) and (max-height: 1100px) {
+@media screen and (max-width: 1100px) {
   button {
     font-size: 4.5vw;
   }
@@ -124,18 +124,6 @@ button:hover {
   }
 }
 
-@media screen and (max-width: 1100px) and (min-height: 1100px) {
-  button {
-    font-size: 4.5vw;
-  }
-  textarea {
-    font-size: 4vw;
-    height: 55vh;
-  }
-  input {
-    font-size: 4.5vw;
-  }
-}
 
 @media screen and (min-width: 2500px) and (min-height: 1400px) {
   button {
