--- a/css/styles.css
+++ b/css/styles.css
@@ -127,14 +127,14 @@ button:hover {
 
 @media screen and (min-width: 2500px) and (min-height: 1400px) {
   button {
-    font-size: 30px;
+    font-size: 2.5vw;
   }
   textarea {
-    font-size: 22px;
+    font-size: 2vw;
     height: 45vh;
   }
   input {
-    font-size: 30px;
+    font-size: 2.5vw;
   }
 }
 
