Inserted multiple device heights

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,3 +150,16 @@ button:hover {
     font-size: 4.5vw;
   }
 }
+
+@media screen and (min-width: 800px) and (max-height: 600px) {
+  button {
+    font-size: 4.5vw;
+  }
+  textarea {
+    font-size: 4vw;
+    height: 45vh;
+  }
+  input {
+    font-size: 4.5vw;
+  }
+}
