--- a/css/styles.css
+++ b/css/styles.css
@@ -163,3 +163,17 @@ button:hover {
     font-size: 2.5vw;
   }
 }
+
+@media screen and (min-width: 300px) and (max-height: 500px) {
+  button {
+    font-size: 2.5vw;
+  }
+  textarea {
+    font-size: 2vw;
+    height: 35vh;
+  }
+  input {
+    font-size: 2.5vw;
+  }
+}
+
