--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ button:hover {
 	top:1px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (min-width: 300px) and (min-height: 501px) {
   button {
     font-size: 4.5vw;
   }
@@ -170,7 +170,7 @@ button:hover {
   }
   textarea {
     font-size: 2vw;
-    height: 30vh;
+    height: 40vh;
   }
   input {
     font-size: 2.5vw;
