--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ button:hover {
 	top:1px;
 }
 
-@media screen and (min-width: 300px) and (min-height: 501px) {
+@media screen and (min-height: 501px) and (max-width: 1100px) {
   button {
     font-size: 4.5vw;
   }
