--- a/css/styles.css
+++ b/css/styles.css
@@ -177,3 +177,15 @@ button:hover {
   }
 }
 
+@media screen and (min-width: 400px) and (max-height: 400px) {
+  button {
+    font-size: 2.5vw;
+  }
+  textarea {
+    font-size: 2vw;
+    height: 25vh;
+  }
+  input {
+    font-size: 2.5vw;
+  }
+}
