--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,19 @@ button:hover {
   }
 }
 
+@media screen and (min-width: 800px) and (max-height: 500px) {
+  button {
+    font-size: 2.5vw;
+  }
+  textarea {
+    font-size: 2vw;
+    height: 35vh;
+  }
+  input {
+    font-size: 2.5vw;
+  }
+}
+
 @media screen and (min-width: 300px) and (max-height: 500px) {
   button {
     font-size: 2.5vw;
