--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ button:hover {
   }
 }
 
-@media screen and (min-width: 800px) and (max-height: 600px) {
+@media screen and (min-width: 800px) and (min-height: 550px) and (max-height: 600px) {
   button {
     font-size: 2.5vw;
   }
@@ -164,13 +164,13 @@ button:hover {
   }
 }
 
-@media screen and (min-width: 800px) and (max-height: 500px) {
+@media screen and (min-width: 800px) and (min-height: 100px) and (max-height: 500px) {
   button {
     font-size: 2.5vw;
   }
   textarea {
     font-size: 2vw;
-    height: 15vh;
+    height: 25vh;
   }
   input {
     font-size: 2.5vw;
