--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ button:hover {
 	top:1px;
 }
 
-@media screen and (min-height: 501px) and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
   button {
     font-size: 4.5vw;
   }
@@ -121,84 +121,5 @@ button:hover {
   }
   input {
     font-size: 4.5vw;
-  }
-}
-
-
-@media screen and (min-width: 2500px) and (min-height: 1400px) {
-  button {
-    font-size: 2.5vw;
-  }
-  textarea {
-    font-size: 2vw;
-    height: 45vh;
-  }
-  input {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 1000px) and (min-height: 1900px) {
-  button {
-    font-size: 4.5vw;
-  }
-  textarea {
-    font-size: 4vw;
-    height: 70vh;
-  }
-  input {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 800px) and (min-height: 550px) and (max-height: 600px) {
-  button {
-    font-size: 2.5vw;
-  }
-  textarea {
-    font-size: 2vw;
-    height: 45vh;
-  }
-  input {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 800px) and (min-height: 100px) and (max-height: 500px) {
-  button {
-    font-size: 2.5vw;
-  }
-  textarea {
-    font-size: 2vw;
-    height: 25vh;
-  }
-  input {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 300px) and (max-height: 500px) {
-  button {
-    font-size: 2.5vw;
-  }
-  textarea {
-    font-size: 2vw;
-    height: 55vh;
-  }
-  input {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 400px) and (max-height: 400px) {
-  button {
-    font-size: 2.5vw;
-  }
-  textarea {
-    font-size: 2vw;
-    height: 30vh;
-  }
-  input {
-    font-size: 2.5vw;
   }
 }
