--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ body {
 }
 
 textarea {
-  width: 80%;
-  height: 45vh;
+  width: 90%;
+  height: calc(70vh - 50px);
   -moz-border-bottom-colors: none;
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
@@ -39,7 +39,7 @@ textarea {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   color: #000;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 22px;
+  font-size: 2.5vh;
   line-height: 1.4em;
   padding: 5px 8px;
   transition: background-color 0.2s ease 0s;
@@ -74,7 +74,7 @@ input {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   color: #000;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 30px;
+  font-size: 2vh;
   line-height: 1.4em;
   text-align: center; 
   background-color: #fff !important;
@@ -82,7 +82,7 @@ input {
   opacity: 1
 }
 
-img { max-width: 80%; height: auto; }
+img { max-width: 50vh; width:90%;}
 
 button {
   box-shadow: 3px 4px 0px 0px #899599;
@@ -94,12 +94,12 @@ button {
   cursor:pointer;
   color:#3a8a9e;
   font-family:Tahoma;
-  font-size:30px;
+  font-size:3vh;
   padding:2px 25px;
   text-decoration:none;
   text-shadow:0px 1px 0px #e1e2ed;
   outline:none;
-  width: 80%;
+  width: 90%;
 }
 
 button:hover {
@@ -109,17 +109,4 @@ button:hover {
 .button:active {
 	position:relative;
 	top:1px;
-}
-
-@media screen and (max-width: 650px) {
-  button {
-    font-size: 4.5vw;
-  }
-  textarea {
-    font-size: 4vw;
-    height: 55vh;
-  }
-  input {
-    font-size: 4.5vw;
-  }
 }
