--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,9 @@ textarea {
   scrollbar-width: none;
   background-color: #fff !important;
   -webkit-text-fill-color: #000;
-  opacity: 1
+  opacity: 1;
+  position: relative;
+  top: -5px;
 }
 
 textarea::-webkit-scrollbar {
@@ -79,7 +81,9 @@ input {
   text-align: center; 
   background-color: #fff !important;
   -webkit-text-fill-color: #000;
-  opacity: 1
+  opacity: 1;
+  position: relative;
+  top: 10px;
 }
 
 img { max-width: 50vh; width:90%;}
@@ -100,6 +104,8 @@ button {
   text-shadow:0px 1px 0px #e1e2ed;
   outline:none;
   width: 90%;
+  position: relative;
+  top: 0px;
 }
 
 button:hover {
@@ -109,4 +115,19 @@ button:hover {
 .button:active {
 	position:relative;
 	top:1px;
+}
+
+@media only screen and (min-height: 400px) {
+  img {
+    position: relative; 
+	top: -30px;
+  }
+  input {
+    position: relative; 
+	top: 20px;
+  }
+  textarea {
+    position: relative; 
+	top: -15px;
+  }
 }
