--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ button {
   color:#3a8a9e;
   font-family:Tahoma;
   font-size:3vh;
+  font-weight:bold;
   padding:0.5vh 2vh;
   text-decoration:none;
   text-shadow:0px 1px 0px #e1e2ed;
