Added different font

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ button {
   display:inline-block;
   cursor:pointer;
   color:#3a8a9e;
-  font-family:Bookman, serif;
+  font-family:Tahoma;
   font-size:3vh;
   padding:0.5vh 2vh;
   text-decoration:none;
