--- a/css/styles.css
+++ b/css/styles.css
@@ -112,9 +112,11 @@ button:hover {
 	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
 	background-color:#bab1ba;
 	border-radius:15px;
+	outline: 0;
 }
 .button:active {
 	position:relative;
 	top:1px;
 	border-radius:15px;
+	outline: 0;
 }
