--- a/css/styles.css
+++ b/css/styles.css
@@ -113,10 +113,17 @@ button:hover {
 	background-color:#bab1ba;
 	border-radius:15px;
 	outline: 0;
+	border: 0;
 }
 .button:active {
 	position:relative;
 	top:1px;
 	border-radius:15px;
 	outline: 0;
+	border: 0;
+}
+.button:focus {
+	border-radius:15px;
+	outline: 0;
+	border: 0;
 }
