--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,14 @@ body {
   -webkit-text-size-adjust:none;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 textarea {
   width: 90%;
   height: calc(65vh - 50px);
@@ -122,6 +130,6 @@ button:hover {
 
 button:focus {
   outline: none !important;
-  box-shadow: none;
+  box-shadow: none !important;
   border-radius:15px;
 }
