--- a/css/styles.css
+++ b/css/styles.css
@@ -125,11 +125,6 @@ button:hover {
 .button:active {
 	position:relative;
 	top:1px;
-	outline: none !important;
-}
-
-button:focus {
-  outline: none !important;
-  box-shadow: none !important;
-  border-radius:15px;
+    background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+    background-color:#ededed;
 }
