--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,5 @@ button:hover {
 }
 
 button:focus {
-    box-shadow: 0.5vh 0.7vh 0vh 0vh #899599;
-    background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-    background-color:#ededed;
-}
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	background-color:#bab1ba;}
