Added visited element

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,12 +117,18 @@ button {
 }
 
 button:hover {
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	background-color:#bab1ba;
-	border-radius:15px;
-	outline: 0;
+  background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+  background-color:#bab1ba;
+  border-radius:15px;
+  outline: 0;
 }
 
 button:focus {
-	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-	background-color:#bab1ba;}
+  background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+  background-color:#bab1ba;
+}
+
+button:visited {
+  background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+  background-color:#ededed;
+}
