--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,10 @@ button:focus {
   background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
   background-color:#bab1ba;
 }
+
+iframe {
+  width: 90%;
+  height: 4vh;
+  position: relative;
+  top: 5vh;
+}
